# kite

./: .gitignore  .gitlab-ci.yml  404.html  Building script.ipynb  CMakeLists.txt  CNAME  Dockerfile  Dockerfile.buildenv  Dockerfile.full  KITEx  KITExCMAKE  LICENSE.md  Makefile  Makefile.linux  Makefile.mac  Makefile.old  Makefile.ubuntu  README.md  README.txt  Test Data.ipynb  ToDoList.md  Untitled.ipynb  __about__.py  compile_script.sh  define_lattice.py  disorder.md  editing_hdf_files.md  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example_automatic_scaling.py  example_magnetic_field.py  example_new_naming_convention.py  export_lattice.py  getting_started.md  (+31 more)
.ipynb_checkpoints/: KPM Scrip configuration-checkpoint.ipynb
Src/: .GlobalSimulation.cpp.swp  .SimulationCondDC.cpp.swp  .SimulationSingleShot.cpp.swp  ComplexTraits.cpp  ComplexTraits.hpp  Coordinates.cpp  Coordinates.hpp  Gamma1D.cpp  Gamma2D.cpp  Gamma3D.cpp  Generic.hpp  Global.cpp  Global.hpp  GlobalSimulation.cpp  Hamiltonian.cpp  Hamiltonian.hpp  HamiltonianDefects.cpp  HamiltonianDefects.hpp  HamiltonianRegular.cpp  HamiltonianRegular.hpp  HamiltonianVacancies.cpp  HamiltonianVacancies.hpp  KPM_Vector.cpp  KPM_Vector.hpp  KPM_Vector2D.cpp  KPM_Vector2D.hpp  KPM_Vector3D.cpp  KPM_Vector3D.hpp  KPM_VectorBasis.cpp  KPM_VectorBasis.hpp  Kpm_Vector.hpp  LatticeStructure.cpp  LatticeStructure.hpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  SimulationARPES.cpp  SimulationCondDC.cpp  SimulationCondOpt.cpp  (+14 more)
about/: index.html
api/: index.html
background/: index.html
docs/: about.md  (+13 more)
tools/: CMakeLists.txt  KITE-tools  KITE-tools_photo_ava08  KITE-tools_photo_cfp06  KITE-tools_shg_ava08  KITE-tools_shg_cfp06  Makefile  Makefile.linux  Makefile.mac  ProcessSingleShot.py  README.md  calc_kpm  process_arpes.py  process_arpes1.py  process_single_shot.py  script.sh
tools/Src/: .tensor.hpp.swp  calculate.hpp  calculate_simple.hpp  conductivity_dc.hpp  conductivity_nonlinear.hpp  conductivity_optical.hpp  dos.hpp  headers.hpp  info.hpp  macros.hpp  main.cpp  myHDF5.hpp  parse_input.hpp  systemInfo.hpp  value.hpp
tools/Src/CondDC/: conductivity_dc.cpp  conductivity_dc.hpp  fill.cpp
tools/Src/OptCond_1order/: conductivity_optical.cpp  conductivity_optical.hpp
tools/Src/OptCond_2order/: Gamma0photo.cpp  Gamma0photo.hpp  Gamma1.cpp  Gamma1.hpp  Gamma1photo.cpp  Gamma2.cpp  Gamma2.hpp  Gamma2photo.cpp  Gamma3.cpp  Gamma3.hpp  Gamma3photo.cpp  Gamma3photo.hpp  conductivity_2order.cpp  conductivity_2order.hpp
tools/Src/Spectral/: arpes.cpp  arpes.hpp  dos.cpp  ldos.cpp  ldos.hpp
tools/Src/Tools/: calculate.bak  calculate.cpp  functions.cpp  functions.hpp  messages.hpp  myHDF5.hpp  parse_input.cpp  parse_input.hpp  systemInfo.cpp  systemInfo.hpp
tools/Src/photocond/: .Gamma3shg.hpp.swp  .conductivity_nonlinear_complete.hpp.swp  Gamma1.hpp  Gamma1photo.hpp  Gamma1shg.hpp  Gamma2.hpp  Gamma2photo.hpp  Gamma2shg.hpp  Gamma3.hpp  Gamma3shg.hpp  conductivity_nonlinear_complete.hpp
tools/Src/shg/: shg.hpp
tools/kpm_calculate/: Makefile  calc_cond  calc_kpm  graficos  graficos.ps  ss.ps  tmp.txt
tools/kpm_calculate/Src/: .calculate.hpp.swo  .calculate.hpp.swp  .calculate_simple.hpp.swp  .conductivity_nonlinear.hpp.swp  .info.hpp.swp  .main.cpp.swo  .main.cpp.swp  .parse_input.hpp.swp  .tensor.hpp.swo  .tensor.hpp.swp  calculate.hpp  calculate_simple.hpp  conductivity_dc.hpp  conductivity_nonlinear.hpp  conductivity_optical.hpp  dos.hpp  headers.hpp  info.hpp  main.cpp  parse_input.hpp  systemInfo.hpp  tensor.hpp  unused.hpp
tools/old/: ldos_m.hpp  myHDF5.oldcpp  myHDF5.oldhpp  tensor.hpp
tools/old/Src/: ComplexTraits.hpp  calculate_simple.hpp  conductivity_dc.hpp  conductivity_optical.hpp  myHDF5.hpp  systemInfo.hpp
tools/old/Src/photocond/: Gamma0photo.hpp  conductivity_nonlinear_complete.hpp
tools/src/: ComplexTraits.hpp  arpes.cpp  arpes.hpp  calculate.cpp  calculate.hpp  calculate_simple.hpp  compiletime_info.h.in  conductivity_dc.cpp  conductivity_dc.hpp  conductivity_optical.cpp  conductivity_optical.hpp  dos.cpp  dos.hpp  functions.cpp  functions.hpp  ldos.cpp  ldos.hpp  macros.hpp  main.cpp  messages.hpp  myHDF5.cpp  myHDF5.hpp  parse_input.cpp  parse_input.hpp  systemInfo.cpp  systemInfo.hpp
tools/src/cond_2order/: Gamma0.cpp  Gamma0.hpp  Gamma0photo.cpp  Gamma0photo.hpp  Gamma1.cpp  Gamma1.hpp  Gamma1photo.cpp  Gamma1photo.hpp  Gamma2.cpp  Gamma2.hpp  Gamma2photo.cpp  Gamma2photo.hpp  Gamma3.cpp  Gamma3.hpp  Gamma3photo.cpp  Gamma3photo.hpp  conductivity_2order.cpp  conductivity_2order.hpp
tools/src/cond_dc/: conductivity_dc.cpp  conductivity_dc.hpp  fill.cpp
tools/tests/: Theoretical_Square_Lattice.nb  compare.py  compare2.py  export_lattice.py  start_test.sh  test_function.cpp  test_script_graphene_CondXX  test_script_graphene_DOS  test_script_graphene_DOS_as_disorder  test_script_graphene_DOS_magnetic  test_script_graphene_DOS_magnetic_as_disorder  test_script_graphene_hbn  test_script_sq_DOS  test_script_sq_DOS_magnetic
tools/tests/lattice_building_scripts/: KPM Scrip configuration.ipynb  lattice_building_graphene_no_disorder_DOS.py  lattice_building_square_lattice_no_disorder.py  lattice_building_square_lattice_no_disorder_DOS.py  lattice_building_square_lattice_no_disorder_DOS_magnetic.py
tools/tests/next3/: config.py  configREF.h5  kite.py  out.txt  out_2.txt  out_4.txt  out_4b.txt  out_4im.txt  script_mod.sh
tools/tests/next7/: config.py  process_arpes.py
tools/tests/next8/: configREF.h5  description.txt  kite.py  log  process_arpes.py  script.sh  square_lattice.py
tools/tests/reference_configuration_files/graphene/: generate_hdf.py  script1.sh
tools/tests/test1/: configREF.h5  params  script.sh
tools/tests/test2/: description  function  params  script.sh  square_lattice_ldos.h5
tools/tests/test3/: description  function  params  script.sh  script_mod.sh
tools/tests/test4/: config.py  config_sym.py  script.sh
tools/tests/test5/: config.py  config_sym.py  script.sh
tools/tests/test6/: script.sh
(+558 files in other folders)
